--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,26 @@
   } 
 }
 
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background-color: var(--background);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.navbar.hiddden::after {
+  display: -100px;
+  transition: transform 0.3s cubic-bezier(0.4,0,0.2,1)
+}
+
+
 .nav-underline-animate {
   position: relative;
   display: inline-block;
@@ -31,7 +51,7 @@
   bottom: 0;
   width: 100%;
   height: 2px;
-  background: currentColor;
+  background: white;
   transform: scaleX(0);
   transform-origin: center;
   transition: transform 0.3s cubic-bezier(0.4,0,0.2,1);
@@ -42,9 +62,11 @@
 }
 
 .nav-text-hover:hover {
+  font-weight: 400;
   scale: 1.05;
   transform: translateY(-4px);
   text-decoration-line: under;
+  color: white;
 }
 
 body {
