--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,68 +5,60 @@
 	--foreground: #171717;
 }
 
-@theme {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  } 
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60px;
-  background-color: var(--background);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 60px;
+	background-color: var(--background);
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0 20px;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .navbar.hiddden::after {
-  display: -100px;
-  transition: transform 0.3s cubic-bezier(0.4,0,0.2,1)
+	display: -100px;
+	transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 .nav-underline-animate {
-  position: relative;
-  display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 .nav-underline-animate::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 2px;
-  background: white;
-  transform: scaleX(0);
-  transform-origin: center;
-  transition: transform 0.3s cubic-bezier(0.4,0,0.2,1);
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 2px;
+	background: white;
+	transform: scaleX(0);
+	transform-origin: center;
+	transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-underline-animate:hover::after {
-  transform: scaleX(1);
+	transform: scaleX(1);
 }
 
 .nav-text-hover:hover {
-  font-weight: 400;
-  scale: 1.05;
-  transform: translateY(-4px);
-  text-decoration-line: under;
-  color: white;
+	font-weight: 400;
+	scale: 1.05;
+	transform: translateY(-4px);
+	text-decoration-line: under;
+	color: white;
 }
 
 body {
